--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -27,4 +27,19 @@ body{
     background: url('/imgs/background.jpg')
 }
 
+.scroll::-webkit-scrollbal-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
 
+.scroll::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #D62929;
+}
